Added more info on about page

--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -9,6 +9,7 @@
   <body>
     <div class="main-content">
       {{>header}}
+      <p> This site was created by Trent Davis. It uses the data from MapBox and WeatherStack to get weather data at certain any location in real time</p>
       <img class="portrait" src='img/ProfilePic.jpg'>
     </div>
 
